# aws_to_biquery_project

./: .gitignore  README.md  aws_file_download.py  gcp_helper.py  gnaf.json  pyproject.toml  test_connection.py  text.txt
